syntax = "proto3";

package gitrim.svc;

option go_package = "github.com/fardream/gitrim/svc";

// GiTrimConfig contains the configurations for GiTrim service.
message GiTrimConfig {
  // All information for GitTrim service is contained in a badger db.
  string db_path = 1;

  map<string, RemoteConfig> remotes = 11;

  string admin_address = 21;
  string webhook_address = 22;

  int32 shutdown_wait_secs = 23;

  string aes_key = 31;
}

message RemoteConfig {
  enum RemoteType {
    UNKNOWN = 0;
    GITEA = 1;
    GITHUB = 2;
  }

  string remote_name = 1;
  string remote_url = 2;
  RemoteType remote_type = 3;
  string secret = 4;
  string username = 5;
}
